<strong>v0.12.2</strong>

<b>QoL</b>
- Changed fullscreen toggle to F11

<b>Bugfixes</b>
- Fixed new cat moon event crash
- Fixed patrol grammar
- Fixed issue with problematic dependent names
- Added missing stat attributes to certain patrols 
- Fixed prefix and suffix list loading
- Fixed tail accessories appearing on cats without tails
- Fixed missing bracket
- Fixed murdermittens issue
- Removed torn pelt from scarring list
- Fixed "Viscous Kittypets" typo
- Added missing relationship descriptor in grief event
- Fixed errors in patrol text
- Prevented underage cats from having mates
- Fixed history crash
- Fixed error dialogue persisting between screens

<strong>v0.12.1</strong>
- Fix builds

<strong>v0.12.0</strong>

<b>Features</b>
- CLAN FOCUS: New feature accessed via the Warrior's Den. Direct your warriors' Focus towards specific goals, such as feeding the Clan or sabotaging other neighboring Clans. When the Focus is changed, there is a cooldown of 3 moons before it can be changed again, so choose wisely! Please note that some Focuses aren't accessible in Classic mode and that some Focuses require certain cat ranks to be present.
- PRONOUNS: Wow! The cats have pronouns other than they/them? Yes it's true! Cats can now naturally generate with they/them, he/him, or she/her pronouns. Want a cat to have different pronouns than those options? You can do that to! Check out their profile page and the Change Gender option to add any pronoun under the sun. These pronouns will be used in text throughout the game when referring to that cat (give a big hand to our writing team for the monumental amount of work they did to get pronouns integrated into all the text!) Please note a new game setting to revert the game to only generating they/them pronouns for all cats.