@@ -1,5 +1,5 @@
 {
-    "title": "Clangen",
+    "title": "ClangenCustomizer",
     "background": "resources/images/mac_installer_bg_blank.png",
     "icon-size": 75,
     "window": {
