@@ -32,8 +32,8 @@ def get_data_dir():
     from platformdirs import user_data_dir
 
     if get_version_info().is_dev():
-        return user_data_dir("ClanGenBeta", "ClanGen")
-    return user_data_dir("ClanGen", "ClanGen")
+        return user_data_dir("ClanGenCustomizerBeta", "ClanGen")
+    return user_data_dir("ClanGenCustomizer", "ClanGen")
 
 
 def get_log_dir():
